<resources>
    <string name="app_name">TadsBot</string>
    <string name="inicio_apresentacao">Olá, estou aqui para prestar informações sobre o curso Tecnólogo em Análise e Desenvolvimento de Sistemas do IFRS - Campus Rolante</string>
    <string name="TadsBot">TadsBot</string>>
    <string name="inicio_ajuda">Como eu poderia lhe ajudar?</string>
    <string name="botao_inicial">Iniciar Chat</string>
    <string name="inicio_sobre">Sobre</string>
    <string name="inicio_repositorio">Repositório</string>
    <string name="voltar_inicio">Voltar</string>
    <string name="chat_bot_name">Tux</string>
    <string name="horario">00:00 dd/mm/yyyy</string>
    <string name="conteudo">Exemplo de Mensagem Recebida</string>
    <string name="entrada">Digite Sua Mensagem</string>
    <string name="enviar_msg">Enviar</string>
    <string name="msg_enviada">Exemplo de Mensagem Enviada</string>
</resources>