<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewApresentacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inicio_apresentacao" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="547dp"
            app:srcCompat="@drawable/tuxgaucho" />

        <TextView
            android:id="@+id/textViewAjuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inicio_ajuda" />

        <Button
            android:id="@+id/buttonConversar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_inicial"
            android:backgroundTint="@color/verde_tux"
            android:onClick="iniciarConversa"/>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:menu="@menu/bottom_navigation_menu" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>