<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chat">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="7dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/verde_tux"
            android:onClick="voltarAoInicio"
            android:text="Voltar" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="71dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/chat_bot_name"
            android:textAlignment="textEnd"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/tuxgaucho" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="592dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="-1dp">

        <TextView
            android:id="@+id/textViewRespostaChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textViewRespostaUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextMensagem"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/entrada"
            android:inputType="text" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde_tux"
            android:text="@string/enviar_msg"
            android:onClick="botaoEnviarMensagem"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>